--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "rest-api",
     "web-api"
   ],
-  "author": "Wildan Izzudin",
+  "author": "RiooXdzz",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/neoxr/rest-api-web/issues"
